thread.c
@@ -337,6 +337,7 @@ rb_threadptr_interrupt_common(rb_thread_t *th, int trap)
     else {
 	/* none */
     }
+    native_cond_signal(&th->interrupt_cond);
     native_mutex_unlock(&th->interrupt_lock);
 }
 
@@ -624,6 +625,7 @@ thread_create_core(VALUE thval, VALUE args, VALUE (*fn)(ANYARGS))
     th->interrupt_mask = 0;
 
     native_mutex_initialize(&th->interrupt_lock);
+    native_cond_initialize(&th->interrupt_cond, RB_CONDATTR_CLOCK_MONOTONIC);
 
     /* kick thread */
     err = native_thread_create(th);
@@ -5055,6 +5057,8 @@ Init_Thread(void)
 	    gvl_acquire(th->vm, th);
 	    native_mutex_initialize(&th->vm->thread_destruct_lock);
 	    native_mutex_initialize(&th->interrupt_lock);
+	    native_cond_initialize(&th->interrupt_cond,
+				   RB_CONDATTR_CLOCK_MONOTONIC);
 
 	    th->pending_interrupt_queue = rb_ary_tmp_new(0);
 	    th->pending_interrupt_queue_checked = 0;
@@ -5197,4 +5201,23 @@ rb_uninterruptible(VALUE (*b_proc)(ANYARGS), VALUE data)
     rb_ary_push(cur_th->pending_interrupt_mask_stack, interrupt_mask);
 
     return rb_ensure(b_proc, data, rb_ary_pop, cur_th->pending_interrupt_mask_stack);
+}
+
+void
+ruby_kill(pid_t pid, int sig)
+{
+    int err;
+    rb_thread_t *th = GET_THREAD();
+    rb_vm_t *vm = GET_VM();
+
+    if ((th == vm->main_thread) && (pid == getpid())) {
+	native_mutex_lock(&th->interrupt_lock);
+	err = kill(pid, sig);
+	native_cond_wait(&th->interrupt_cond, &th->interrupt_lock);
+	native_mutex_unlock(&th->interrupt_lock);
+    } else {
+	err = kill(pid, sig);
+    }
+    if (err < 0)
+	rb_sys_fail(0);
 }
